feat(browser): compile customer sources in browser
Add a browser-local source pipeline to the Playwright/TeaVM conformance harness: raw customer Java sources are scanned in the browser, lowered into generated direct-invocation Java source, compiled by browser javac, and executed as WASM without host-side customer app generation.

Move the source scanner core to sdk-api as a text scanner while keeping the JVM Path wrapper, and keep registry descriptor data structures browser-friendly enough for shared metadata use.

Verification: ./mvnw -q -Pbrowser-conformance install; ./mvnw -q -pl sdk-jvm -am test; HandlerInvocationBackendBenchmark; CrossVersionFluxzeroHandlerBenchmark; OnDemandComparisonBenchmark.